--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,7 @@
   "name": "wxmf",
   "private": true,
   "dependencies": {
-    "jquery": "~1.11.1"
+    "jquery": "~1.11.1",
+    "requirejs": "2.1.10"
   }
 }
